--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -14,6 +14,7 @@
     "@coinbase/wallet-mobile-sdk": "^1.0.13",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-native-vector-icons": "^6.4.18",
