--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-animated-nav-tab-bar": "^3.1.10",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^2.12.2",
