--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@coinbase/wallet-mobile-sdk": "^1.0.13",
+    "@craftzdog/react-native-buffer": "^6.0.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -27,10 +28,13 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-modal": "^13.0.1",
+    "react-native-quick-base64": "^2.1.2",
+    "react-native-reanimated": "3.6.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
+    "readable-stream": "^4.5.2",
     "styled-components": "^6.1.11",
     "viem": "1.21.4",
     "wagmi": "1.4.13"
@@ -51,6 +55,9 @@
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "resolutions": {
+    "browserify-sign": "4.2.2"
   },
   "engines": {
     "node": ">=18"
