--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@coinbase/wallet-mobile-sdk": "^1.0.13",
-    "@craftzdog/react-native-buffer": "^6.0.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native/assets-registry": "^0.74.83",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -24,17 +24,15 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-animated-nav-tab-bar": "^3.1.10",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-modal": "^13.0.1",
-    "react-native-quick-base64": "^2.1.2",
-    "react-native-reanimated": "3.6.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
-    "readable-stream": "^4.5.2",
     "styled-components": "^6.1.11",
     "viem": "1.21.4",
     "wagmi": "1.4.13"
@@ -55,9 +53,6 @@
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
-  },
-  "resolutions": {
-    "browserify-sign": "4.2.2"
   },
   "engines": {
     "node": ">=18"
