--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@coinbase/wallet-mobile-sdk": "^1.0.13",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-clipboard/clipboard": "1.13.2",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/firestore": "^20.0.0",
