--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -21,18 +21,22 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@walletconnect/react-native-compat": "^2.13.1",
     "@web3modal/wagmi-react-native": "^1.4.1",
+    "events": "^3.3.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-aes-crypto": "^3.0.2",
     "react-native-animated-nav-tab-bar": "^3.1.10",
     "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-modal": "^13.0.1",
+    "react-native-quick-crypto": "^0.6.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
+    "readable-stream": "^4.5.2",
     "styled-components": "^6.1.11",
     "viem": "1.21.4",
     "wagmi": "1.4.13"
