--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -22,6 +22,7 @@
     "@walletconnect/react-native-compat": "^2.13.1",
     "@web3modal/wagmi-react-native": "^1.4.1",
     "events": "^3.3.0",
+    "node-forge": "^1.3.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-aes-crypto": "^3.0.2",
