--- a/lensapp/ios/GoogleService-Info.plist
+++ b/lensapp/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>xyz.projectlens.lens</string>
+	<string>xyz.projectlens.app</string>
 	<key>PROJECT_ID</key>
 	<string>lens-0</string>
 	<key>STORAGE_BUCKET</key>
