--- a/lensapp/package.json
+++ b/lensapp/package.json
@@ -36,6 +36,7 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-modal": "^13.0.1",
     "react-native-quick-crypto": "0.7.0-rc.9",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
